Fix inconsistant spacing and add line in holdings (#5111)
* Fix inconsistant spacing and add line in holdings

* Remove badge group padding

* Reduce gap between cards and badges

---------

--- a/app/assets/stylesheets/components/availability.scss
+++ b/app/assets/stylesheets/components/availability.scss
@@ -16,7 +16,7 @@
   justify-content: flex-start;
   flex-direction: row;
   border-radius: 0.375rem;
-  padding: 0.5rem 0rem 0.5rem 0rem;
+  padding: 0.25rem 0rem 0.5rem 0rem;
 
   a:hover, a:focus {
     outline: solid 0.25rem var(--color-princeton-orange-on-white) !important;
@@ -140,6 +140,10 @@
       --bs-bg-opacity: 0;
     }
   }
+}
+
+.holding-block {
+  border-bottom: 1px solid $gray;
 }
 
 .holding-label {
@@ -376,13 +380,13 @@
   tr {
     display: flex;
     flex-wrap: wrap;
-    padding-bottom: 0.75rem;
+    padding-bottom: 0.625rem;
 
     &:last-child {
       border-bottom: 0;
 
       td {
-        padding-bottom: 0;
+        padding-bottom: 10px;
       }
 
       td:last-child > li:first-child {
@@ -395,7 +399,7 @@
       border: 0;
       display: block;
       flex: 1;
-      padding: 10px 15px 10px 0;
+      padding: 20px 15px 10px 0;
     }
 
     td:last-child{
@@ -407,8 +411,6 @@
     }
 
     .holding-details {
-      margin-top: var(--space-x-small);
-
       ul,
       li {
         font-size: .875rem;
@@ -534,4 +536,8 @@
     width: 100%;
   }
 
+}
+
+.format-badge-group {
+  padding-top: 4px;
 }
