--- a/app/assets/stylesheets/components/record.scss
+++ b/app/assets/stylesheets/components/record.scss
@@ -70,6 +70,7 @@
       .lux-text-style {
         font-size: 0.875rem;
         letter-spacing: initial;
+        padding-top: 9px;
       }
 
       .find-it,
